updated samples for 2023 v2 release

--- a/XF/FlexViewer101/FlexViewer101.XF/Resources/AppResources.resx
+++ b/XF/FlexViewer101/FlexViewer101.XF/Resources/AppResources.resx
@@ -163,7 +163,7 @@
     <value>File has been saved to </value>
   </data>
   <data name="Save" xml:space="preserve">
-    <value>保存</value>
+    <value>Save</value>
   </data>
   <data name="Save As" xml:space="preserve">
     <value>Save As</value>
